Fix wavy text-decoration on iOS Safari
Similar to #62

--- a/src/css/page/tables.scss
+++ b/src/css/page/tables.scss
@@ -108,6 +108,7 @@
   .form-input,
   .form-textarea {
     text-decoration: $text-decoration-invalid;
+    -webkit-text-decoration: $text-decoration-invalid;
     text-decoration-skip-ink: none;
   }
 
